bug fixes related to field splits